--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,16 @@ jobs:
 
       - name: Build
         run: hugo
+
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: eu-central-1
+
+      - name: Upload content
+        run: aws s3 sync public/ s3://ubogdan.com --delete
+
+      - name: Cloudfront
+        run: aws cloudfront create-invalidation --distribution-id E36TAK5X2X8KES --paths "/*"
