--- a/config.toml
+++ b/config.toml
@@ -46,3 +46,14 @@ widgets = ["sidemenu", "recent", "categories", "taglist", "social"]
 [Params.widgets]
 recent_num = 5          # Set the number of articles in the "Recent articles" widget
 tags_counter = false    # Enable counter for each tag in "Tags" widget (disabled by default)
+
+[Params.widgets.social]
+# facebook = ""
+twitter = "ubogdan"
+# instagram = ""
+linkedin = "67241434"
+# telegram = ""
+github = "ubogdan"
+# gitlab = ""
+# bitbucket = ""
+# email = ""
