--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "en-us"
 paginate = "10"
 theme = "mainroad"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
-googleAnalytics = "UA-200652301-1" # Enable Google Analytics by entering your tracking id
+googleAnalytics = "G-BVX5E8JVMG" # Enable Google Analytics by entering your tracking id
 pygmentsCodefences = true
 pygmentsUseClasses = true
 pygmentsStyle = "dracula"
